2013-02-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components.php: cleaned source code
	style.
	
	* godmode/modules/manage_network_components_form_common.php: fixed
	the show types of module.

2013-02-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php: fixed the string graph.
	
	Fixes: #3601287

2013-02-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/styles/pandora_minimal.css,
	operation/agentes/stat_win.php: fixed the lost arrow to show the
	menu when Pandora is in other languages as spanish.

2013-02-06 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_template.php: fixed lost code from the
	some change in this file.
	
	Fixes: #3603548
	
	* operation/agentes/datos_agente.php,
	operation/agentes/estado_monitores.php: fixed source code style.

2013-02-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/estado_monitores.php,
	operation/agentes/datos_agente.php, godmode/setup/setup.php,
	include/functions_config.php: added the can disabled the command
	snapshot.
	
	Fixes: #3602773

2013-02-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/gis_maps/render_view.php: fixed the height of maps when
	the menu is short.
	
	Fixes: #3602800

2013-02-01  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: Added function 'api_get_pandora_servers'.
        * include/functions_servers.php: Fixed a typo.

	Merged from trunk (rev7304).

2013-01-24 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.php: fixed the
	default value for the period in the data item.

2013-01-21  Koichiro KIKUCHI  <koichiro@rworks.jp>

	* pandora_console.redhat.spec: Updated version strings.
	 (for 4.0.3 release).

---------------------------------
Official 4.0.3 RELEASE
---------------------------------

2013-01-18  Sancho Lerena <slerena@artica.es>

	* extensions/update_manager/sql/update_manager.sql: Updated
	to last package version.